[package]
name = "noether-guard"
version = "0.1.0"
edition = "2021"
description = "Physics linter — verify conservation laws in simulations using Noether's theorem"
license = "MIT"
repository = "https://github.com/SuperInstance/noether-guard"
keywords = ["physics", "conservation", "noether", "simulation", "verification"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
